# ev-lens

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260514_0001_initial_schema.py  20260514_0002_snapshots_unique_and_import_tables.py  20260514_0003_app_settings.py
backend/app/: config.py  db.py  main.py
backend/app/api/: ai.py  alerts.py  app_settings.py  auth.py  battery.py  charges.py  deps.py  health.py  imports.py  integrations.py  tariffs.py  vehicles.py
backend/app/models/: __init__.py  ai.py  alert.py  app_setting.py  battery.py  charge.py  energy.py  imports.py  integration.py  location.py  tariff.py  user.py  vehicle.py
backend/app/schemas/: ai.py  battery.py  charge.py  imports.py  vehicle.py
backend/app/security/: auth.py  encryption.py
backend/app/services/: first_run.py  settings_store.py
backend/app/services/ai/: anthropic_provider.py  base.py  bedrock_provider.py  factory.py  openai_provider.py  xai_provider.py
backend/app/services/battery/: anomalies.py  estimator.py
backend/app/services/charging/: detector.py  planner.py  tariff.py
backend/app/services/imports/: teslamate.py
backend/app/services/integrations/: powerwall.py  wall_connector.py
backend/app/workers/: battery_worker.py  energy_poller.py  poller.py
backend/tests/: conftest.py  test_detector.py  test_health.py  test_tariff.py  test_tesla_provider.py
backend/tests/fixtures/: tesla_vehicle_data.json  tesla_vehicles.json
bridge/: README.md  (+2 more)
(+66 files in other folders)
